trying to fix momentum scrolling bug on ios

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 .body {
   overflow-x: hidden;
-  position: fixed;
+  position: absolute;
   height: 100%;
   width: 100%;
 }
